--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -1,4 +1,9 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %}
+<!-- ======================= -->
+
+{% block title %} {{ title }} {% endblock %}
+<!-- ======================= -->
+{% block content %}
 <div class="container mt-5">
   <h2 class="mb-4">Product List</h2>
   <table class="table table-striped table-hover table-sm table-bordered">
@@ -34,7 +39,13 @@
   </table>
 
   <div class="text-right">
-    <button type="button" class="btn btn-success">Tambah</button>
+    <button
+      type="button"
+      class="btn btn-success"
+      onclick="window.location.href='{% url 'add_product' %}'"
+    >
+      Tambah
+    </button>
   </div>
 </div>
 
