--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <title>{% block title %}Halaman Utama{% endblock title %}</title>
+    <title>{% block title %}Halaman Utama{% endblock %}</title>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
