--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -27,7 +27,13 @@
         <td>{{product.category_id}}</td>
         <td>{{product.status_id}}</td>
         <td class="action-buttons">
-          <button type="button" class="btn btn-primary btn-sm">Edit</button>
+          <button
+            type="button"
+            class="btn btn-primary btn-sm"
+            onclick="window.location.href='{% url 'update_product' product.id %}'"
+          >
+            Edit
+          </button>
           <button type="button" class="btn btn-danger btn-sm ml-2">
             Delete
           </button>
