--- a/templates/products/update_product.html
+++ b/templates/products/update_product.html
@@ -1,23 +1,27 @@
 {% extends "base.html" %}
 <!-- ======================= -->
 
-{% block title %} {{title}} {% endblock title %}
-
+{% block title %}{{ title }}{% endblock %}
 <!-- ======================= -->
-{% block content %}
 
+{% block content %}
 <div class="container mt-5">
   <div class="card w-75 mx-auto">
     <div class="card-header text-center">
-      <h2 class="mb-0">Add Product</h2>
+      <h2 class="mb-0">{{ title }}</h2>
     </div>
     <div class="card-body">
       {% if success_message %}
       <div class="alert alert-success" role="alert">{{ success_message }}</div>
       {% endif %}
 
-      <form method="post" action="{% url 'add_product' %}" class="row gap-3">
+      <form
+        method="post"
+        action="{% url 'update_product' product_id %}"
+        class="row gap-3"
+      >
         {% csrf_token %}
+        <input type="hidden" name="product_id" value="{{ product_id }}" />
 
         <div class="row col-md-12 form-group">
           <label
@@ -33,11 +37,9 @@
         </div>
 
         <div class="row col-md-12 form-group">
-          <div class="col-md-4">
-            <label for="{{ form.price.id_for_label }}" class="form-label"
-              >Price</label
-            >
-          </div>
+          <label for="{{ form.price.id_for_label }}" class="form-label col-md-4"
+            >Price</label
+          >
           <div class="col-md-8">
             {{ form.price }} {% if form.price.errors %}
             <div class="text-danger">{{ form.price.errors }}</div>
@@ -46,11 +48,11 @@
         </div>
 
         <div class="row col-md-12 form-group">
-          <div class="col-md-4">
-            <label for="{{ form.category_id.id_for_label }}" class="form-label"
-              >Category</label
-            >
-          </div>
+          <label
+            for="{{ form.category_id.id_for_label }}"
+            class="form-label col-md-4"
+            >Category</label
+          >
           <div class="col-md-4">
             {{ form.category_id }} {% if form.category_id.errors %}
             <div class="text-danger">{{ form.category_id.errors }}</div>
@@ -59,29 +61,28 @@
         </div>
 
         <div class="row col-md-12 form-group">
-          <div class="col-md-4">
-            <label for="{{ form.status_id.id_for_label }}" class="form-label"
-              >Status</label
-            >
-          </div>
+          <label
+            for="{{ form.status_id.id_for_label }}"
+            class="form-label col-md-4"
+            >Status</label
+          >
           <div class="col-md-4">
             {{ form.status_id }} {% if form.status_id.errors %}
             <div class="text-danger">{{ form.status_id.errors }}</div>
             {% endif %}
           </div>
         </div>
+
         <div class="row col-md-12 pl-5">
           <button type="submit" class="btn btn-primary mr-4">Submit</button>
-          <a href="{% url 'add_product' %}" class="btn btn-secondary ms-2"
-            >Cancel</a
-          >
+          <a href="{% url 'index' %}" class="btn btn-secondary ms-2">Cancel</a>
         </div>
       </form>
     </div>
   </div>
 
-  <div class="w-75 mx-auto">
-    <a href="{% url 'index' %}" class="btn btn-secondary ms-2 mt-3">Kembali</a>
+  <div class="w-75 mx-auto mt-3">
+    <a href="{% url 'index' %}" class="btn btn-secondary">Kembali</a>
   </div>
 </div>
 
